--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Hello World -- This is my website!</h1>
     <p>I'm making this to host my portfolio for free. To learn more, read my <a href="statement.html">artist's statement.</a></p>
+    <iframe src="https://player.vimeo.com/video/233360080" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><p><a href="https://vimeo.com/233360080">Squidward Attacks Bikini Bottom</a> from <a href="https://vimeo.com/user56427380">Daniel Lazo</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
   </body>
 </html>
