--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <p>I'm making this to host my portfolio for free. To learn more, read my <a href="statement.html">artist's statement.</a></p>
    
     <center><iframe src="https://player.vimeo.com/video/234706015" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></center>
-    <p><a href="https://vimeo.com/234706015">Filipinos Eat Dog</a> from <a href="https://vimeo.com/user56427380">Daniel Lazo</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+    <p>Project #1 Nonarrative Video:<a href="https://vimeo.com/234706015">Filipinos Eat Dog</a> from <a href="https://vimeo.com/user56427380">Daniel Lazo</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
     
     <center><iframe src="https://player.vimeo.com/video/233360080" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></center>
-    <p><a href="https://vimeo.com/233360080">Squidward Attacks Bikini Bottom</a> from <a href="https://vimeo.com/user56427380">Daniel Lazo</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+    <p>In-Class Exercise:<a href="https://vimeo.com/233360080">Squidward Attacks Bikini Bottom</a> from <a href="https://vimeo.com/user56427380">Daniel Lazo</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
   </body>
 </html>
